--- a/main/static/css/availability-styles.css
+++ b/main/static/css/availability-styles.css
@@ -81,3 +81,15 @@
   #weeklyTable td:last-child {
     border-bottom: none;
   }
+
+  #dailyTable td::before,
+  #weeklyTable td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    color: #555;
+    text-transform: uppercase;
+    margin-right: 1rem;
+    min-width: 110px;
+    display: inline-block;
+  }
+}
