--- a/main/static/css/availability-styles.css
+++ b/main/static/css/availability-styles.css
@@ -36,4 +36,6 @@
     cursor: not-allowed;
     opacity: 1;
   }
-  
+
+  /* Responsive table for mobile devices */
+@media screen and (max-width: 768px) {
