style: added availability-icon class for consistent tick/cross display

--- a/main/static/css/availability-styles.css
+++ b/main/static/css/availability-styles.css
@@ -28,6 +28,13 @@
     border-color: var(--accent-color);
     background-color: #fff;
   }
+
+  /* Added for icon spacing consistency */
+  .availability-icon {
+    font-size: 1.2rem;
+    vertical-align: middle;
+  }
+
   
   /* Disabled state for table inputs/selects */
   .disabled-input {
@@ -93,6 +100,8 @@
     min-width: 110px;
     display: inline-block;
   }
+
+
 }
 
 
