style: moved expert search bar above tab views for global access

--- a/main/page_managers/templates/manager_expert_availability.html
+++ b/main/page_managers/templates/manager_expert_availability.html
@@ -45,6 +45,15 @@
     </div>
   </div>
 
+  <!-- Global expert search bar for daily and weekly views -->
+<div class="input-group mb-3">
+  <span class="input-group-text"><i class="fas fa-search"></i></span>
+  <input type="text" id="expert-search" class="form-control" placeholder="Search experts...">
+</div>
+
+<div class="tab-content mt-4" id="expertAvailabilityTabsContent">
+
+
   <div class="tab-content mt-4" id="expertAvailabilityTabsContent">
 
     <!-- Daily View -->
