--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -1221,3 +1221,10 @@ h1, h2, h3, h4, h5 {
   }
 
 }
+
+.bid-count {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 0px;
+  padding-top: 0px;
+}
