style: added tooltips for form requirements

--- a/main/page_auth/templates/register.html
+++ b/main/page_auth/templates/register.html
@@ -8,22 +8,6 @@
 
   <div class="login-form-background">
     <div class="login-container register-container">
-      <!-- Error Messages -->
-      {% for error in form.username.errors %} 
-      <div class="alert alert-danger" role="alert">{{ error }}</div>
-      {% endfor %}
-
-      {% for error in form.email.errors %}
-      <div class="alert alert-danger" role="alert">{{ error }}</div>
-      {% endfor %}
-
-      {% for error in form.password.errors %}
-      <div class="alert alert-danger" role="alert">{{ error }}</div>
-      {% endfor %}
-
-      {% for error in form.confirm_password.errors %}
-      <div class="alert alert-danger" role="alert">{{ error }}</div>
-      {% endfor %}
 
       <!-- Heading -->
       <h2 class="mt-5 mb-4 text-left login-heading">Register</h2>
@@ -33,10 +17,21 @@
           <!-- Username -->
           <div class="form-group login-form">
             <label for="enter-username" class="form-label">Username</label>
+            <i class="fas fa-info-circle" 
+              data-bs-toggle="tooltip"
+              data-bs-placement="top"
+              title="Usernames can be between 2 and 16 characters">
+            </i>
             <div class="user-container">
               <i class="fa-solid fa-user"></i>
               {{ form.username(class_="form-control required-field", placeholder="Enter a username", id_="enter-username", maxlength_="50", autocomplete="username") }}
             </div>
+            <div class="req-label">
+              Usernames must be at least 8 characters.
+            </div>
+            {% for error in form.username.errors %} 
+            <div class="form-warning" role="alert">{{ error }}</div>
+            {% endfor %}
           </div>
           <!-- Email -->
           <div class="form-group login-form">
@@ -45,14 +40,31 @@
               <i class="fas fa-envelope"></i>
               {{ form.email(class_="form-control required-field", placeholder="Enter your email", id_="enter-email",minlength_="5", maxlength_="100", autcomplete="email") }}
             </div>
+            {% for error in form.email.errors %}
+            <div class="form-warning" role="alert">{{ error }}</div>
+            {% endfor %}
           </div>
           <!-- Password -->
           <div class="form-group login-form">
             <label for="enter-password" class="form-label">Password</label>
+            <!-- Indentation is replicated in the tooltip -->
+            <i class="fas fa-info-circle" 
+              data-bs-toggle="tooltip"
+              data-bs-placement="top"
+              title="Password must meet the following requirements:
+
+- Be between 8-24 characters
+- Contain at least one uppercase letter
+- Contain at least one number
+- Contain at least one special character (e.g. %*!&)">
+            </i>
             <div class="pass-container">
               <i class="fas fa-lock"></i>
               {{ form.password(class_="form-control required-field", placeholder="Enter a password", id_="enter-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
             </div>
+            {% for error in form.password.errors %}
+            <div class="form-warning" role="alert">{{ error }}</div>
+            {% endfor %}
           </div>
           <!-- Confirm Password -->
           <div class="form-group login-form">
@@ -61,6 +73,9 @@
               <i class="fas fa-lock"></i>
               {{ form.confirm_password(class_="form-control required-field", placeholder="Confirm your password", id_="enter-confirm", minlength_="8", maxlength_="24", autocomplete="new-password") }}
             </div>
+            {% for error in form.confirm_password.errors %}
+            <div class="form-warning" role="alert">{{ error }}</div>
+            {% endfor %}
           </div>
           <!-- Submit -->
           <div class="form-group login-form">
