--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -280,6 +280,12 @@ h1, h2, h3, h4, h5 {
   font-family: var(--font-mono);
 }
 
+.alert-danger,
+.alert-success,
+.alert-info {
+  color: black;
+}
+
 /* Countdown Timer */
 .countdown {
   font-weight: 700;
