--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -23,6 +23,11 @@ html, body {
   overflow-x: hidden;
 }
 
+/* Fixes modal shifting screen */
+.modal-open {
+  padding-right: 0 !important;
+}
+
 body {
   font-family: var(--font-sans);
   background-color: var(--secondary-color);
@@ -282,7 +287,8 @@ h1, h2, h3, h4, h5 {
 
 .alert-danger,
 .alert-success,
-.alert-info {
+.alert-info,
+.alert-warning {
   color: black;
 }
 
